--- a/src/scss/mainchat-grid.scss
+++ b/src/scss/mainchat-grid.scss
@@ -61,7 +61,6 @@
 		border-top: 2px orange solid;
 		bottom: 0px;
 		width: 100%;
-		/*height: 50px;*/
 		height: 100%;
 		padding-right: 20px;
 		@include LINE(2px);
@@ -85,7 +84,6 @@
 		&--input {
 			grid-area: input;
 			width: 95%;
-			/*height: 75%;*/
 			height: 40px;
 			margin: 5px auto;
 			padding-left: 10px;
@@ -164,15 +162,17 @@
 			}
 			&__menu{
 				display: flex;
+				opacity:0;
 				flex-wrap: wrap;
 				width: 215px;
-				height: 200px;
+				height: 0px;
 				position: relative;
 				top: -240px;
 				border: 2px white solid;
 				background: transparent;
 				background-size: cover;
 				overflow: scroll;
+				transform-origin: bottom;
 				&--randomGIF{
 					position: relative;
 					width: 100%;
